<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_register_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toTopOf="@id/fragment_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/registro_lbl"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/register_name_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_last_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/last_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/correo_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_last_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                android:hint="@string/contra_hint"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_confirm_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                android:hint="@string/c_password_hint"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acepto términos y condiciones de uso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_confirm_password_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/btn_register_lbl"
        app:layout_constraintBottom_toTopOf="@id/fragment_register_lbl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_card" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_register_lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/register_lbl1"
        android:textColor="@color/app_white"
        android:textSize="@dimen/btn_text_size"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_register_lbl2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_register_lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_lbl2"
        android:textColor="@color/app_white"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fragment_register_lbl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_register_lbl1"
        app:layout_constraintTop_toTopOf="@id/fragment_register_lbl1" />

</androidx.constraintlayout.widget.ConstraintLayout>