<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ForgotFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_forgot_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgot_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/correo_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="64dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgot_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_card"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgot_lbl1"
        android:text="@string/btn_forgot_lbl" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgot_lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:text="@string/btn_no_cuenta"
        android:textColor="@color/app_white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_forgot_lbl2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgot_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgot_lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_no_cuenta_2"
        android:textColor="@color/app_white"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fragment_forgot_lbl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_forgot_lbl1"
        app:layout_constraintTop_toTopOf="@id/fragment_forgot_lbl1" />

</androidx.constraintlayout.widget.ConstraintLayout>